# commitlint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  action.yml  codecov.yml  pyproject.toml  pytest.ini  release-please-config.json  setup.cfg
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  commitlint.yaml  release-please.yml  test_action.yaml
docs/: cli.md  conventional-commits.md
github_actions/: __main__.py  event.py  run.py
github_actions/action/: event.py  run.py  utils.py
src/commitlint/: __init__.py  __version__.py  cli.py  commitlint.py  config.py  console.py  constants.py  exceptions.py  git_helpers.py  messages.py
src/commitlint/linter/: __init__.py  _linter.py  utils.py  validators.py
tests/: test_cli.py  test_config.py  test_console.py  test_git_helpers.py
tests/fixtures/: actions_env.py  linter.py
tests/test_commitlint/: test_check_commit_message.py  test_is_ingored.py  test_remove_comments.py
tests/test_github_actions/: test_event.py
tests/test_github_actions/test_run/: test_check_commit_messages.py  test_get_pr_commit_messages.py  test_get_push_commit_messages.py  test_run.py  test_run_action.py  test_run_commitlint.py
tests/test_github_actions/test_utils/: test_get_boolean_input.py  test_get_input.py  test_request_github_api.py  test_write_line_to_file.py  test_write_output.py
tests/test_linter/: test__linter.py
tests/test_linter/test_utils/: test_is_ingored.py  test_remove_comments.py  test_remove_diff_from_commit_message.py
