[metadata]
name = commitlint
version = 0.1.0
description = commitlint is is a pre-commit hook designed to lint your commit messages according to the Conventional Commits standard.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    commitlint = commitlint.cli:main
