[metadata]
name = commitlint
version = 0.2.1
license = MIT
author = opensource-nepal
author_email = aj3sshh@gmail.com, sugatbajracharya49@gmail.com
description = commitlint is is a pre-commit hook designed to lint your commit messages according to the Conventional Commits standard.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    commitlint
    commit lint
    python commitlint
    conventional commit
    conventional commit message
    python commit
    github actions
    pre-commit
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

url = https://github.com/opensource-nepal/commitlint
project_urls =
    Source = https://github.com/opensource-nepal/commitlint
    Changelog = https://github.com/opensource-nepal/commitlint/blob/main/CHANGELOG.md

[options]
packages = find:

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    commitlint = commitlint.cli:main
